# TotoSlots_Solana

./: Anchor.toml  Anchor.toml.bak  README.md  README.txt  package-lock.json  package.json
References/: App.tsx  App.tsx.bak  TotoSlotStructLib.sol  TotoSlots.sol  app.js  lib.rs  main.rs  vector.rs
References/python/: AsynAPI_Client.py  RPCsimulateTransaction.py  Websockets_Client.py  examples.py
app/src/lib/: anchorClient.js
programs/TotoSlots/: Cargo.toml
programs/TotoSlots/src/: ins.rs  lib.rs  main.rs  state.rs
tests/: TotoSlots.py  TotoSlots.ts
