[package]
name = "TotoSlots"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[[bin]]
name = "totoslots"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "toto_slots"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"

